templates/external-dns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  labels:
    app: external-dns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: k8s.gcr.io/external-dns/external-dns:v0.7.6
        args:
        - --source=service # ingress is also possible
        - --domain-filter=${SITE_DOMAIN} # (optional) limit to only example.com domains; change to match the zone created above.
        - --provider=cloudflare
