templates/alertmanager-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: alertmanager.${CLUSTER_NAME}.${SITE_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-kube-prometheus-alertmanager
            port:
              number: 9093
  tls:
  - hosts:
    - alertmanager.${CLUSTER_NAME}.${SITE_DOMAIN}
    secretName: cert-wildcard
